--- a/source/widget/UserHome.perfection/perfect-information.less
+++ b/source/widget/UserHome.perfection/perfect-information.less
@@ -437,3 +437,74 @@
 		font-size: 12px;
 	}
 }
+#welcome-live-tips-infor {
+    width: 460px;overflow: hidden;
+    .live-tips-itme {
+        overflow: hidden;
+        .ui-avatars {
+            float:left;display: inline-block;width:60px;margin-right: 10px;
+            img {display: block;width:60px;height:60px;border-radius: 50%;overflow: hidden;}
+            span {
+                display: block;padding-top: 5px;color: #999;
+            }
+        }
+        .course-details {
+            float: left;width:380px;font-family: 'Microsoft YaHei';
+            .course-title {
+                font-size: 16px;
+                a {color: #333;}
+            }
+            .course-time {font-size: 12px;color: #e74d3c;}
+            .course-labal {font-size: 14px;color: #666;}
+        }
+    } 
+    .btn-goto-study {
+        padding-top: 15px;
+        a {
+            display: block;width:150px;height: 35px;line-height: 35px;background: #e74d3c;color: #fff;text-align: center;margin:0 auto;border-radius: 2px;font-family: 'Microsoft YaHei';font-size: 14px;
+        }
+    }
+}
+.live-Modal-tips {
+    .modal-content {
+        width:465px;height: 253px;
+        .modal-header {
+            .modal-title {font-family: 'Microsoft YaHei';}
+        }
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
