--- a/source/widget/Mall.live/live.less
+++ b/source/widget/Mall.live/live.less
@@ -351,3 +351,20 @@
   margin-bottom: 10px;
   color: #999;
 }
+.live-fail-modal {
+  overflow: hidden;
+  p {
+    font-size: 18px;font-weight: normal;color: #666;
+    &.success-title {
+      color: #e74c3c;padding:15px 0;
+    }
+    &.success-pic {
+      padding-bottom: 15px;
+      img {width: 150px;height: 150px;}
+    }
+    &.success-txt {
+      span {color: #e74c3c;}
+    }
+    &.success-o {font-size: 12px;color: #e74c3c;padding-top:35px;}
+  }
+}
