--- a/source/widget/Public.Header/header.less
+++ b/source/widget/Public.Header/header.less
@@ -16,17 +16,13 @@
     clear: both;
     .h-logo {
         float: left;
-        width: 340px;
+        width: 350px;
+        height: 99px;
         line-height: 99px;
         margin-right: 10px;
         overflow: hidden;
         a {
-            display: block;
-            width: 350px;
-            height: 99px;
-            background: url(img/logo.png?20160707) no-repeat 10px center;
-            color: transparent;
-            
+            img {padding-left: 10px;}
         }
     }
     .h-search {
