--- a/source/widget/Public.Topbar/topbar.less
+++ b/source/widget/Public.Topbar/topbar.less
@@ -18,6 +18,24 @@
     .ui-dropdown {
         width: auto !important;
         position: relative;
+        &.hoverHideTips {
+            .dropdown-body-widen{
+                min-width: 200px;
+                margin-left:-11px;
+                .inline-block{
+                    display: inline-block;
+                    width: 60px;
+                    a {
+                        &:hover {text-decoration: underline;}
+                    }
+                }
+            }
+        }
+        &.ui-dropdown-more {
+          .dropdown-body{
+            margin-left:-1px;
+          }  
+        }
         .dropdown-handle {
             display: inline-block;
             cursor: pointer;
@@ -35,7 +53,7 @@
             background: #fff;
             border: 1px solid #dcdcdc;
             position: absolute;
-            left: 0;
+            left: 6px;
             top: 29px;
             z-index: 1;
             overflow: hidden;
@@ -49,13 +67,7 @@
                 color: #666;
             }
         }
-        .dropdown-body-widen{
-            min-width: 200px;
-            .inline-block{
-                display: inline-block;
-                width: 60px;
-            }
-        }
+        
         &.hover {
             position: relative;
             z-index: 10;
@@ -87,18 +99,14 @@
             padding: 0 5px;
         }
         .dropdown-body {
-            margin-left: 6px;
+            //margin-left: 5px;
             text-align: left;
         }
         .hover {
-            &:before {
-                padding-right: 9px;
-                content: " ";
-            }
             .dropdown-handle {
                 padding: 0 9px;
-                margin-left: -3px;
-                margin-right: -4px;
+                margin-left: -5px;
+                margin-right: -3px;
             }
         }
         li > a {
@@ -121,6 +129,10 @@
                     height: 30px;
                     overflow: hidden;
                     float: left;
+                    a {
+                        color: #e74c3c;
+                        &:hover {text-decoration: underline;}
+                    }
                 }
             }
         }
