--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -5,6 +5,12 @@
 @dark333:#333;
 @blueColor: #1e89e0;
 
+.course-select-btn-htlp {
+  position: absolute;
+  right: 0;
+  margin-top: -51px;
+  top: 50%;
+}
 ul, li {
   list-style: none;
 }
