频道筛选页

--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -1790,6 +1790,7 @@ ul, li {
         display:block;
         text-align: center;
         &.every-time {
+          line-height: 180%;
           padding:10px 5px;
           a {
              color: #e74c3c;
