直播课程筛选页优化

--- a/source/widget/Mall.courseInfo/ui-course-info.less
+++ b/source/widget/Mall.courseInfo/ui-course-info.less
@@ -446,28 +446,30 @@
   width: 46px;
   height: 40px;
   line-height: 40px;
-  background: url(/static/img/icon-rank.png) no-repeat;
+  background-image: url(/static/img/icon-rank-info.png);
   color: #fff;
   text-align: center;
   font-size: 20px;
   padding-left: 5px;
+  background-size: 46px 40px;
+  background-repeat: no-repeat;
 }
 .ui-course-infor-wrap .course-center-list .course-content-teacher .coach-teacher span.info-c strong.hotcourse {
   font-size: 12px;
   font-weight: normal;
 }
 .ui-course-infor-wrap .course-center-list .course-content-teacher .coach-teacher span.info-c strong.c-disable {
-  background: url(/static/img/icon-rank-disable.png) no-repeat;
+  background-image: url(/static/img/icon-rank-disable.png);
   font-size: 14px;
   font-weight: normal;
 }
 .ui-course-infor-wrap .course-center-list .course-content-teacher .coach-teacher span.info-c strong.hotReport {
-  background: url(/static/img/icon-rank-hotReport.png) no-repeat;
+  background-image: url(/static/img/icon-rank-hotReport.png);
   font-size: 14px;
   font-weight: normal;
 }
 .ui-course-infor-wrap .course-center-list .course-content-teacher .coach-teacher span.info-c strong.addReport {
-  background: url(/static/img/icon-rank-add.png) no-repeat;
+  background-image: url(/static/img/icon-rank-add.png);
   font-size: 14px;
   font-weight: normal;
 }
