--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -1440,6 +1440,17 @@ ul, li {
       }
     }
   }
+  .attend-course-time {
+    position: absolute;left: 400px;
+    span {display: inline-block;}
+    a {
+        display: inline-block;
+        background: url(img/no-check.png) 2px 11px no-repeat;
+        padding-left: 20px;
+        margin-right: 15px;
+        &.current {background: url(img/checked.png) 2px 11px no-repeat;}
+      }
+    }
 }
 .preletive {
   position: relative;
@@ -1790,7 +1801,6 @@ ul, li {
         display:block;
         text-align: center;
         &.every-time {
-          line-height: 180%;
           padding:10px 5px;
           a {
              color: #e74c3c;
