学习中心侧边栏

--- a/source/widget/UserHome.sidebar/sidebar.less
+++ b/source/widget/UserHome.sidebar/sidebar.less
@@ -55,6 +55,43 @@
                 content: '';
             }
         }
+        &.fa-play-circle-phone{
+            background: url('img/Headphones.png?__inline') no-repeat;
+            background-size: 100% auto;
+            &:before{
+                content: '';
+            }
+        }
+    }
+    span {
+        display: block;
+    }
+}
+#module-sidebar-ask{
+    top: 610px;
+    position: fixed;
+    width: 60px;
+    margin-left: 3%;
+    &.module-sidebar-right{
+        right: 10px;
+    }
+    .btn {
+        height: 80px;
+        font-size: 14px;
+        padding:15px 0;
+    }
+    i {
+        font-size: 28px;
+        width: 24px;
+        height: 25px;
+        margin-bottom: 5px;
+        &.fa-play-circle-phone{
+            background: url('img/Headphones.png?__inline') no-repeat;
+            background-size: 100% auto;
+            &:before{
+                content: '';
+            }
+        }
     }
     span {
         display: block;
