筛选页优化

--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -4,7 +4,16 @@
 @gray999:#999;
 @dark333:#333;
 @blueColor: #1e89e0;
-
+.live-course-list-null {
+  padding:20px;
+  overflow: hidden;
+  text-align: center;
+  background: #fff;
+  img {display: block;width: 100px;margin:auto;}
+  span {
+    display: block;font-size: 16px;color: #666;
+  }
+}
 .course-select-btn-htlp {
   position: absolute;
   right: 0;
@@ -1841,7 +1850,7 @@ ul, li {
       }
   }
   .rank-coach {
-    width: 145px;
+    width: 155px;
     line-height: 90px;
     overflow: hidden;
     span {
@@ -1955,6 +1964,7 @@ ul, li {
       font-size: 18px;
       color: #e74c3c;
       font-weight: normal;
+      padding-left:20px;
     }
   }
 }
