智齿客服添加

--- a/source/widget/Mall.courseInfo/ui-course-info.less
+++ b/source/widget/Mall.courseInfo/ui-course-info.less
@@ -1312,7 +1312,18 @@
   top: 133px;
   z-index: 0;
 }
-
+.courseConsult_info {
+  float: right;
+  width: 120px;
+  height: 40px;
+}
+.courseConsult_info .zhiCustomBtn {
+   display: block;
+    height: 40px;
+    text-indent: -999999em;
+     background: url(../Mall.courseInfo/img/headphones_kc.png) no-repeat;
+     cursor: pointer;
+}
 /*
  * CSS Styles that are needed by jScrollPane for it to operate correctly.
  *模拟听课页---讲节列表过多时的滚动条
