--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -14,6 +14,21 @@
     display: block;font-size: 16px;color: #666;
   }
 }
+.courseConsult {
+  position: fixed;
+  width: 102px;
+  height: 106px;
+  right:0;
+  top:30%;
+  z-index: 1;
+  .zhiCustomBtn {
+    display: block;
+    height: 106px;
+    text-indent: -999999em;
+     background: url(../Mall.courseInfo/img/headphones_select.png) no-repeat;
+     cursor: pointer;
+  }
+}
 .course-select-btn-htlp {
   position: absolute;
   right: 0;
