课程筛选页优化

--- a/source/widget/Mall.courseInfo/ui-course-info.less
+++ b/source/widget/Mall.courseInfo/ui-course-info.less
@@ -581,6 +581,21 @@
   bottom: 0;
   z-index: 1;
 }
+.ui-course-infor-wrap .course-center-list .course-button-list .course-sale-time {
+  float: left;
+  width: 160px;
+  height: 40px;
+  background: #bfbfbf;
+  border-radius: 2px;
+  color: #fff;
+  margin-right: 10px;
+  font-size: 16px;
+  text-align: center;
+}
+.ui-course-infor-wrap .course-center-list .course-button-list .course-sale-time em {
+  display: block;
+  font-size: 12px;
+}
 .ui-course-infor-wrap .course-center-list .course-button-list .btn {
   width: 160px;
   height: 40px;
