--- a/source/widget/UM.Nav/nav.less
+++ b/source/widget/UM.Nav/nav.less
@@ -41,10 +41,16 @@
                 line-height: 50px;
                 background-color: transparent;
                 h3 {
+                    float: left;
                     margin: 0;
                     font-size: 16px;
                     line-height: 29px;
                     color: #666;
+                }
+                span{
+                    float: right;
+                    color: #e54c3c;
+                    line-height: 40px;
                 }
             }
             .panel-body {
