真实姓名优化
学习中心-基本资料-真实姓名

--- a/source/widget/UM.Basic.information/basic-information.less
+++ b/source/widget/UM.Basic.information/basic-information.less
@@ -56,6 +56,9 @@
             span{
                 color: #333;
             }
+            .realname {
+                margin-bottom: 9px;
+            }
             .error-box{
                 position: absolute;
                 clear: both;  
