--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -1283,7 +1283,8 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 	}
 }
 .drop-course-detail-inner{
-	padding: 20px 82px 5px;
+	padding: 5px 15px;
+    padding-right: 0;
 	.drop-charge-tip{
 		font-size: 16px;
 	}
@@ -1303,6 +1304,12 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 		}
 		span{
 			color: #e74c3c;
+		}
+		label{
+			padding: 0 3px;
+			font-size: 12px;
+			margin-right: 1px;
+			font-weight: normal;
 		}
 	}
 	p.drop-charge-explain{
