--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -1625,7 +1625,7 @@ ul,li{list-style: none;}
         }
     }
 	.rank-limit-places {
-		width:440px;line-height: 90px;background:url(../../Mall.courseInfo/img/limit-icon.png) 205px 28px no-repeat;text-align: right;color: #999;
+		width:440px;line-height: 90px;background:url(../Mall.courseInfo/img/limit-icon.png) 205px 28px no-repeat;text-align: right;color: #999;
 		strong {font-size: 18px;color: #e74c3c;font-weight: normal;}
 	}
 }
