课程详情页优化

--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -1983,6 +1983,13 @@ ul, li {
       &.former {
         padding-top: 32px;
       }
+        
+    }
+   .stop-shop-times {
+      font-size: 12px;color: #999;
+       em {
+           color: #e74c3c;font-style: normal;
+       }
     }
     del {
       color: #999;
