个人信息增加英文名验证

--- a/source/widget/UM.Basic.information/basic-information.less
+++ b/source/widget/UM.Basic.information/basic-information.less
@@ -91,7 +91,7 @@
                 font-style: normal;
                 color: #333;
             }
-            .nickname,.school{
+            .nickname,.school,.englishName{
                 position: relative;
                 top: -8px;
                 width: 260px;
