首页增加广告位浮层

--- a/source/widget/Public.Nav/nav.less
+++ b/source/widget/Public.Nav/nav.less
@@ -71,7 +71,7 @@
     .live-course-help {
         width:100%;height:380px;overflow: hidden;background: #323541;position: absolute;left:0;top:50px;z-index: 10999;
         .course-help-pic {
-            width:1190px;height: 380px;margin:0 auto;background: url(img/index-live-info-pic.png?20160714) no-repeat;position: relative;
+            width:1190px;height: 380px;margin:0 auto;position: relative;
             .help-end-time {
                 width:165px;height: 25px;color: #fff;font-size: 14px;position: absolute;right:10px;top:18px;z-index: 1;
             }
