--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -108,6 +108,65 @@
 	padding: 0 15px;
 	line-height: 42px;
 }
+.row-home-slide {
+    width:1190px;
+    margin:0 auto 0;
+    overflow: hidden;
+}
+.home-slide-wrap {
+    width:1050px;
+    height: 70px;
+    overflow: hidden;
+    margin-bottom: 10px;
+    position: relative;
+    left:-10px;
+    ul {
+        height: 70px;
+        li{
+            overflow: hidden;
+        display: none;
+            &.active {
+                display: block;
+            }
+            a {display: block;height: 70px;}
+        }
+    }
+    .focus-num-wrap {
+        height: 25px;
+        width:100%;
+        position: relative;
+        bottom:25px;
+        z-index: 1;
+        ol {
+            width: 99%;
+            position: absolute;
+            left: 0;
+            bottom: 4px;
+            z-index: 1;
+            text-align: right;
+            margin-left: 0;
+            padding:0;
+            li {
+                display: inline-block;
+                width:20px;
+                height: 20px;
+                border-radius: 20px;
+                background: #fff;
+                line-height: 20px;
+                font-size: 12px;
+                text-align: center;
+                margin-left: 5px;
+                cursor: pointer;
+                text-indent: 0;
+                border:0;
+                &.active {
+                    background: rgba(0, 0, 0, 0.7);
+                    color: #fff;
+                }
+            }
+        }
+    }
+}
 .courselayout-list{
 
 	.popover{
